[tool.poetry]
name = "unused-deps"
version = "0.1.0"
description = "Find and remove unused Python dependencies in your virtual environment"
authors = [
    "Nathan Furnal <nathanfurnal.dev@gmail.com>",
    "Carlos Rivas <signifer.geo@yandex.com>"
]
readme = "README.md"
packages = [{include = "unused_deps"}]

[tool.poetry.dependencies]
python = ">=3.10"
pyyaml = "^6.0"
packaging = "^23.0"

[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
mypy = "^1.3.0"
types-pyyaml = "^6.0.12.9"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
